fixed contract address alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,8 +152,9 @@ div {
 .world-is-yours {
     font-size: 28px;
     font-weight: 400;
-    line-height: 48px;
+    line-height: 38px;
     text-align: left;
+    max-width: 287px;
 }
 
 .casino {
@@ -192,6 +193,14 @@ div {
     height: auto;
 }
 
+.move-to-fore {
+    position: relative;
+    z-index: 100;
+}
+
+
+/* === Mobile === */
+
 @media (max-width: 600px) {
     .components-container {
         padding: 2rem 1rem 2rem 1rem;
@@ -222,9 +231,11 @@ div {
     .collaborators-tiles p {
         font-size: 15px;
     }
-}
-
-.move-to-fore {
-    position: relative;
-    z-index: 100;
+    .world-is-yours {
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 22px;
+        text-align: left;
+        max-width: 180px;
+    }
 }
