--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -206,7 +206,7 @@
     left: 628px;
     /* padding: 5px 49px 5px 49px; */
     border-radius: 10px;
-    /* text-align: center; */
+    text-align: center;
     display: flex;
     align-items: center;
     font-weight: 100;
